springboot-docker-kubernetes-ingress-traefik-WIP/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greeting-ingress
spec:
  defaultBackend:
    service:
      name: greeting-service
      port:
        number: 8080
  rules:
    - host: example.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  greeting-service
                port:
                  number: 8080
